--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
 	"require": {
-		"laravel/framework": "4.0.*"
+		"laravel/framework": "4.0.*",
+		"emberlabs/gravatarlib": "dev-master",
+		"dflydev/markdown": "1.0.*@dev",
+		"cartalyst/sentry": "2.0.*",
+		"intervention/image": "dev-master",
+		"laravelbook/laravel4-powerpack": "dev-master",
+		"oly/web-artisan": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
